--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:lc4ozWNLrzGGrfS5uJ8tC4jNvR0hwFxK9f2IZ9K+EhU=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=ahlatap
 DB_USERNAME=root
